--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,6 +1,6 @@
 // colors
 
-$bg-color: whitesmoke;
+$bg-color: white;
 $main-font-color: blue;
 $small-font: 1.2em;
 $large-font: 1.5em;
@@ -8,6 +8,7 @@ $large-font: 1.5em;
 @mixin twoColumns {
   padding-top: 40px;
   width: 45%;
+  transform: translateY(-230%);
 }
 
 @mixin oneColumn {
@@ -31,25 +32,24 @@ html {
 }
 
 #tomato {
-  transform: translate(0, -100%);
+  transition: all 1s ease;
+  transform: translate(0, -75%);
   z-index: -1;
 }
 
 #tomato_stem {
-  fill: tomato;
+  fill: whitesmoke;
 }
 
 #tomato_outline {
-  fill: tomato;
-}
-
-#tomato_inside {
   fill: whitesmoke;
 }
 
 #container {
-  width: 400px;
-  height: 400px;
+  width: 320px;
+  height: 450px;
+
+  background-color: azure;
 
   text-align: center;
 
@@ -69,13 +69,16 @@ html {
   @include twoColumns;
 }
 
-#timer_container,
 #controls_container {
-  @include oneColumn;
+  // @include twoColumns;
+  @include durationControls;
+  transform: translateY(-600%);
 }
 
 #timer_container {
+  @include oneColumn;
   font-size: $large-font;
+  margin-top: 100px;
 }
 
 #break_controls_container,
