--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -77,6 +77,10 @@ html {
   left: 50%;
 
   transform: translate(-50%, -50%);
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 #controls_wrapper {
